--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.43.0",
     "framer-motion": "^12.34.3",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
